mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            name: mongo-storage
      volumes:
        #- name: task-pv-storage
        #  persistentVolumeClaim:
        #  claimName: task-pv-claim
        # This AWS EBS volume must already exist.
        - name: mongo-storage
          awsElasticBlockStore:
            volumeID: "vol-0084d6763c3d42296"
            fsType: ext4
